--- a/src/pages/integral/index.less
+++ b/src/pages/integral/index.less
@@ -1,2 +1,16 @@
-.integral {
+.integral-config-page {
+    table td:hover {
+        cursor: pointer;
+        font-size: 14px;
+        color: #1890ff;
+    }
+    .editable-cell-value-wrap {
+        border: 1px solid #d7d7d7;
+        height: 32px;
+        text-align: center;
+        width: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
